# ComfyUI_FL-Path-Animator

./: __init__.py  pyproject.toml
nodes/: FL_PathAnimator.py  FL_PathAnimatorV2.py  __init__.py
web/nodes/: FL_PathAnimator.js  FL_PathAnimatorV2.js
