[project]
name = "comfyui-fl-path-animator"
description = "Interactive path animator with visual editor for creating animated shapes that follow user-drawn paths. WAN ATI compatible for stable video generation."
version = "1.0.3"
license = { file = "LICENSE.txt" }
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.20.0"
]

[project.urls]
Repository = "https://github.com/machinedelusions/ComfyUI_FL-Path-Animator"
Homepage = "https://www.patreon.com/c/Machinedelusions"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "FL Path Animator"
Icon = ""
